[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://project/node/smenu/SMenu.gd" id="1_desak"]
[ext_resource type="PackedScene" path="res://project/node/smenu/parts/SMenuPanel.tscn" id="2_vsj4t"]

[node name="SMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_desak")

[node name="name" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 172.0
offset_right = 175.0
offset_bottom = 212.0
grow_horizontal = 2

[node name="margin" type="MarginContainer" parent="name"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="label" type="Label" parent="name/margin"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="description" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 213.0
offset_right = 175.0
offset_bottom = 293.0
grow_horizontal = 2

[node name="margin" type="MarginContainer" parent="description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="label" type="RichTextLabel" parent="description/margin"]
layout_mode = 2
bbcode_enabled = true
scroll_active = false

[node name="item1" parent="." instance=ExtResource("2_vsj4t")]
layout_mode = 1
offset_left = -30.0
offset_top = -150.0
offset_right = 30.0
offset_bottom = -90.0
pivot_offset = Vector2(30, 30)

[node name="item2" parent="." instance=ExtResource("2_vsj4t")]
layout_mode = 1
offset_left = 60.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = -60.0
pivot_offset = Vector2(30, 30)

[node name="item3" parent="." instance=ExtResource("2_vsj4t")]
layout_mode = 1
offset_left = 90.0
offset_top = -30.0
offset_right = 150.0
offset_bottom = 30.0
pivot_offset = Vector2(30, 30)

[node name="item4" parent="." instance=ExtResource("2_vsj4t")]
layout_mode = 1
offset_left = 60.0
offset_top = 60.0
offset_right = 120.0
offset_bottom = 120.0
pivot_offset = Vector2(30, 30)

[node name="item5" parent="." instance=ExtResource("2_vsj4t")]
layout_mode = 1
offset_left = -30.0
offset_top = 90.0
offset_right = 30.0
offset_bottom = 150.0
pivot_offset = Vector2(30, 30)

[node name="item6" parent="." instance=ExtResource("2_vsj4t")]
layout_mode = 1
offset_left = -120.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = 120.0
pivot_offset = Vector2(30, 30)

[node name="item7" parent="." instance=ExtResource("2_vsj4t")]
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -150.0
offset_top = -30.0
offset_right = -90.0
offset_bottom = 30.0
pivot_offset = Vector2(30, 30)

[node name="item8" parent="." instance=ExtResource("2_vsj4t")]
layout_mode = 1
offset_left = -120.0
offset_top = -120.0
offset_right = -60.0
offset_bottom = -60.0
pivot_offset = Vector2(30, 30)
